--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,11 +3,9 @@ project:
 
 website:
   title: "Anton Kalén"
-  # navbar:
-  #   left:
-  #     - href: index.qmd
-  #       text: Home
-  #     - about.qmd
+  navbar:
+    left:
+      - publications.qmd
 
 format:
   html:
