--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,12 +4,13 @@ project:
 website:
   title: "Anton Kalén"
   navbar:
+    background: light
     left:
       - publications.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: yeti
     css: styles.css
     toc: true
 
